# visualjenga

./: .gitignore  404.html  CLAUDE.md  README.md  dashboard.py  download_dataset.py  index.html  open_dashboard.sh  process_coco.sh  pyproject.toml  run_all_datasets.py  run_jenga.py  run_jenga.sh  run_tests.sh  sitemap.xml  visual_jenga_paper.md
assets/css/: styles.7365812b.css
assets/js/: 237.7c9af517.js  393be207.7f0ea2d9.js  6323513c.dcb36509.js  a94703ab.4df73f15.js  b320baaf.4f806b51.js  c4f5d8e4.e0138c08.js  common.048d757c.js  main.71ee7dfb.js  runtime~main.612aa460.js
docs/: reproduction.md
docs-site/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs-site/docs/: reproduction.md
docs-site/src/pages/: index.js
docs/reproduction/: index.html
markdown-page/: index.html
src/: detect.py  diversity.py  inpaint.py  pipeline.py  segment.py  similarity.py
tests/: conftest.py  test_detect.py  test_diversity.py  test_inpaint.py  test_segment.py  test_similarity.py
